Add Banner to the homepage

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jahid's Portfolio</title>
     <style>
       .website {
-      @apply   bg-custom-background;
+      @apply   bg-artificialLightPeach;
       }
     </style>
   </head>
