--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/bbPmhgG/My-Profile-Pic.png" />
+    <link rel="icon" type="image" href="https://i.ibb.co/bbPmhgG/My-Profile-Pic.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jahid's Portfolio</title>
     <style>
