Update overall website background color and modify banner color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jahid's Portfolio</title>
     <style>
       .website {
-      @apply   bg-artificialLightPeach;
+      @apply   bg-artificialNavyBlue;
       }
     </style>
   </head>
