--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
       @apply   bg-artificialNavyBlue;
       }
     </style>
+      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   
   <body class="website">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 
 </html>
