--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jahid's Portfolio</title>
     <style>
       .website {
-      @apply   bg-artificialNavyBlue;
+      @apply   bg-artificialDarkGray;
       }
     </style>
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
